FLY wire David/force-app/main/default/objects/Build_Request__c/Build_Request__c.object-meta.xml
<CustomObject>
    <label>Build Request</label>
    <nameField>
        <displayFormat>BR-{00000}</displayFormat>
        <label>Build Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Build Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>