FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BOPI-492: Account Name Lookup field</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Build Requests</relationshipLabel>
    <relationshipName>Build_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>