FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>BOPI-492: Final last words: Any another information you can provide that might be helpful to the implementation manager?</description>
    <inlineHelpText>In one or two sentences describe what we are doing in this project</inlineHelpText>
    <label>Additional Information</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>