FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Additional_useful_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_useful_information__c</fullName>
    <description>BOPI-534. For Healthcare. Provide any additional information that would help the Implementation team understand key pain points or custom development commitments made during the sales process.</description>
    <inlineHelpText>Provide any additional information that would help the Implementation team understand key pain points or custom development commitments made during the sales process.</inlineHelpText>
    <label>Additional useful information</label>
    <type>TextArea</type>
</CustomField>