FLY wire David/force-app/main/default/objects/Build_Request__c/fields/B2B_Partner__c.field-meta.xml
<CustomField>
    <fullName>B2B_Partner__c</fullName>
    <description>BOPI-492: Select a Partner option</description>
    <inlineHelpText>Select a Partner option</inlineHelpText>
    <label>B2B Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YayPay</fullName>
            </value>
            <value>
                <fullName>Franconnect</fullName>
            </value>
            <value>
                <fullName>Corcentric</fullName>
            </value>
            <value>
                <fullName>Netsuite</fullName>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>