FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Client_Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Client_Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BOPI-534. For Healthcare. Indicate who is the Client Executive Sponsor</description>
    <inlineHelpText>Indicate who is the Client Executive Sponsor</inlineHelpText>
    <label>Client Executive Sponsor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Build Requests (Client Executive Sponsor)</relationshipLabel>
    <relationshipName>Build_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>