FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Client_Functional_Lead_PM__c.field-meta.xml
<CustomField>
    <fullName>Client_Functional_Lead_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BOPI-492: Enter Contact who will serve as the functional lead project manager on the institution side for this project</description>
    <inlineHelpText>Enter Contact who will serve as the functional lead project manager on the institution side for this project</inlineHelpText>
    <label>Client Functional Lead PM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Build Requests</relationshipLabel>
    <relationshipName>Build_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>