FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Client_PM__c.field-meta.xml
<CustomField>
    <fullName>Client_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BOPI-534. For Healthcare. Indicate the Client PM</description>
    <inlineHelpText>Indicate who is the Client PM</inlineHelpText>
    <label>Client PM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Build Requests (Client PM)</relationshipLabel>
    <relationshipName>Build_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>