FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Confluence_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Confluence_Page_Link__c</fullName>
    <description>BOPI-492: Opportunity and SOW should be linked to the Client Confluence page</description>
    <inlineHelpText>Opportunity and SOW should be linked to the Client Confluence page</inlineHelpText>
    <label>Confluence Page Link</label>
    <type>Url</type>
</CustomField>