FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Current_Bank__c.field-meta.xml
<CustomField>
    <fullName>Current_Bank__c</fullName>
    <description>BOPI-492: For Healthcare. Used to indicate the Current Bank Name</description>
    <inlineHelpText>Enter the Current Bank Name</inlineHelpText>
    <label>Current Bank</label>
    <type>TextArea</type>
</CustomField>