FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Current_Consolidation_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Consolidation_Level__c</fullName>
    <description>BOPI-534. For Healthcare.What is the current level of patient billing on statements?  Visit = One visit per statement.  Patient = All open visits per patient.  Guarantor = All open visits for all patients under that guarantor.</description>
    <inlineHelpText>What is the current level of patient billing on statements?  Visit = One visit per statement.  Patient = All open visits per patient.  Guarantor = All open visits for all patients under that guarantor.</inlineHelpText>
    <label>Current Consolidation Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guarantor Based</fullName>
            </value>
            <value>
                <fullName>Patient Based</fullName>
            </value>
            <value>
                <fullName>Visit Based</fullName>
            </value>
            <value>
                <fullName>Universal Consolidation ID available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>