FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Date_IT_Resources_Available__c.field-meta.xml
<CustomField>
    <fullName>Date_IT_Resources_Available__c</fullName>
    <description>BOPI-492: When are the IT resources available for the project?</description>
    <inlineHelpText>When are the IT resources available for the project?</inlineHelpText>
    <label>Date IT Resources Available</label>
    <type>Date</type>
</CustomField>