FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Date_Of_Technical_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Technical_Call__c</fullName>
    <description>BOPI-492: Date Of Technical Call</description>
    <inlineHelpText>If there was a technical pre-sales call when was it (involving either sales engineer or implementation)</inlineHelpText>
    <label>Date Of Technical Call</label>
    <type>Date</type>
</CustomField>