FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>BOPI-492: Created to enter a descrption</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>