FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Desired_Consolidation_Level__c.field-meta.xml
<CustomField>
    <fullName>Desired_Consolidation_Level__c</fullName>
    <description>BOPI-534. For Healthcare. Does this client want to change the level of consolidation on statements?  For example, do they want to move from visit-based to guarantor-based billing?</description>
    <inlineHelpText>Does this client want to change the level of consolidation on statements?  For example, do they want to move from visit-based to guarantor-based billing?</inlineHelpText>
    <label>Desired Consolidation Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guarantor Based</fullName>
            </value>
            <value>
                <fullName>Patient Based</fullName>
            </value>
            <value>
                <fullName>Visit Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>