FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Desired_Project_Kickoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Project_Kickoff_Date__c</fullName>
    <description>BOPI-492: What Is The Clients Desired Date To Kick off The Project?</description>
    <inlineHelpText>This should be at least two weeks out from the date of submission to allow for internal assignment and scheduling of kick off meeting</inlineHelpText>
    <label>Desired Project Kickoff Date</label>
    <type>Date</type>
</CustomField>