FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Does_the_client_have_a_lockbox__c.field-meta.xml
<CustomField>
    <fullName>Does_the_client_have_a_lockbox__c</fullName>
    <description>BOPI-534. For Healthcare.</description>
    <label>Does the client have a lockbox?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>