FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Email_Engagement_in_scope__c.field-meta.xml
<CustomField>
    <fullName>Email_Engagement_in_scope__c</fullName>
    <description>BOPI-534. For Healthcare.</description>
    <label>Email Engagement in scope?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>