FLY wire David/force-app/main/default/objects/Build_Request__c/fields/EO_Vendor_and_of_placement_days__c.field-meta.xml
<CustomField>
    <fullName>EO_Vendor_and_of_placement_days__c</fullName>
    <description>BOPI-534. For Healthcare. If applicable, provide the name of the early out vendor that this client is working with, and any information related to when they take placement of the balances (i.e. Day 0, Day 30, Day 60, etc).</description>
    <inlineHelpText>If applicable, provide the name of the early out vendor that this client is working with, and any information related to when they take placement of the balances (i.e. Day 0, Day 30, Day 60, etc).</inlineHelpText>
    <label>EO Vendor and # of placement days</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>