FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Financing_Partner_Details__c.field-meta.xml
<CustomField>
    <fullName>Financing_Partner_Details__c</fullName>
    <description>BOPI-492: Enter any details available regarding financing partner</description>
    <inlineHelpText>Enter any details available regarding financing partner</inlineHelpText>
    <label>Financing Partner - Details</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>