FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Go_Live_Date_Driver__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date_Driver__c</fullName>
    <description>BOPI-492: Is there a driver behind the hard go live date?</description>
    <inlineHelpText>Is There A Driver Behind The Hard Go Live Date?</inlineHelpText>
    <label>Go Live Date Driver</label>
    <type>TextArea</type>
</CustomField>