FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Hard_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Hard_Go_Live_Date__c</fullName>
    <description>BOPI-492: Is there a hard go live date?</description>
    <inlineHelpText>This should be the latest date the project can be delivered to go live without impacting the clients roll out timeframes</inlineHelpText>
    <label>Hard Go Live Date</label>
    <type>Date</type>
</CustomField>