FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Integration_Points_Functional_in_Test__c.field-meta.xml
<CustomField>
    <fullName>Integration_Points_Functional_in_Test__c</fullName>
    <description>BOPI-492: Are the integration points (SSO, real time integration, and SFTP files) connected and functional in the test environment?</description>
    <inlineHelpText>Are the integration points (SSO, real time integration, and SFTP files) connected and functional in the test environment?</inlineHelpText>
    <label>Integration Points Functional in Test?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>