FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Internal_Pre_Kickoff_Meeting_Required__c.field-meta.xml
<CustomField>
    <fullName>Internal_Pre_Kickoff_Meeting_Required__c</fullName>
    <description>BOPI-492: Internal Pre-Kickoff Meeting Required?</description>
    <inlineHelpText>Is the internal Pre-Kickoff Meeting Required?</inlineHelpText>
    <label>Internal Pre-Kickoff Meeting Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>