FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Is_Client_Ready_for_Portal__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_Ready_for_Portal__c</fullName>
    <description>BOPI-492: Is the client ready for a portal to be built?</description>
    <inlineHelpText>Is the client ready for a portal to be built?</inlineHelpText>
    <label>Is Client Ready for Portal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>