FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Load_hist_data_or_only_new_placements__c.field-meta.xml
<CustomField>
    <fullName>Load_hist_data_or_only_new_placements__c</fullName>
    <description>BOPI-534. For Healthcare.</description>
    <label>Load hist. data or only new placements?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>