FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Most_Recent_Demo__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Demo__c</fullName>
    <description>BOPI-492: Enter date of most recent demo with the institution</description>
    <inlineHelpText>Date Of Most Recent Demo With Institution</inlineHelpText>
    <label>Most Recent Demo</label>
    <type>Date</type>
</CustomField>