FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Name_of_Lockbox_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Lockbox_Vendor__c</fullName>
    <description>BOPI-534. For Healthcare. What is the bank name for the lockbox vendor? Typically this is the same as their bank.</description>
    <inlineHelpText>What is the bank name for the lockbox vendor? Typically this is the same as their bank.</inlineHelpText>
    <label>Name of Lockbox Vendor</label>
    <type>TextArea</type>
</CustomField>