FLY wire David/force-app/main/default/objects/Build_Request__c/fields/New_Bank_Setup__c.field-meta.xml
<CustomField>
    <fullName>New_Bank_Setup__c</fullName>
    <description>BOPI-492: Does a new bank account need to be set up? Ensure the client has provided the bank information to you</description>
    <inlineHelpText>We will capture the details of this in the supplementary form using in the next steps to raise this work to implementation</inlineHelpText>
    <label>New Bank Setup?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>