FLY wire David/force-app/main/default/objects/Build_Request__c/fields/New_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>New_Payment_Methods__c</fullName>
    <description>BOPI-492: Do New Payment Methods Need To Be Set Up?</description>
    <inlineHelpText>We will capture the details of this in the supplementary form using in the next steps to raise this work to implementation</inlineHelpText>
    <label>New Payment Methods?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>