FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Number_of_Entities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Entities__c</fullName>
    <description>BOPI-492: Enter the number of entities. For B2B only</description>
    <inlineHelpText>Enter the number of entities</inlineHelpText>
    <label>Number of Entities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>