FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BOPI-492: Opportunity Lookup field</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Build Requests</relationshipLabel>
    <relationshipName>Build_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>