FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Oracle_HealtheLife__c.field-meta.xml
<CustomField>
    <fullName>Oracle_HealtheLife__c</fullName>
    <description>BOPI-534. For Healthcare. Does this client have the Oracle HealtheLife portal and do we need to implement the integration?</description>
    <inlineHelpText>Does this client have the Oracle HealtheLife portal and do we need to implement the integration?</inlineHelpText>
    <label>Oracle - HealtheLife</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>