FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Oracle_Tonic_Integration__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Tonic_Integration__c</fullName>
    <description>BOPI-534. For Healthcare. Tonic is the Intake vendor for Oracle. Flywire can collect copays with this integration. Only check this box if the client has confirmed this as a requirement.</description>
    <inlineHelpText>Tonic is the Intake vendor for Oracle. Flywire can collect copays with this integration. Only check this box if the client has confirmed this as a requirement.</inlineHelpText>
    <label>Oracle - Tonic Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>