FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Oracle_Well_Integration__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Well_Integration__c</fullName>
    <description>BOPI-534. For Healthcare. Well is the text messaging vendor for Oracle. Flywire can integrate so our text message are sent through Well. Only check this box if the client has confirmed this as a requirement.</description>
    <inlineHelpText>Well is the text messaging vendor for Oracle. Flywire can integrate so our text message are sent through Well. Only check this box if the client has confirmed this as a requirement.</inlineHelpText>
    <label>Oracle - Well Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>