FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Partner_AE_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Partner_AE_if_applicable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BOPI-534. For Healthcare. Indicate the Partner AE</description>
    <inlineHelpText>Indicate the Partner AE</inlineHelpText>
    <label>Partner AE (if applicable)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Build Requests (Partner AE (if applicable))</relationshipLabel>
    <relationshipName>Build_Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>