FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Payer_Support__c.field-meta.xml
<CustomField>
    <fullName>Payer_Support__c</fullName>
    <description>BOPI-492: Has the institution signed up for payer support?</description>
    <inlineHelpText>Has the institution signed up for payer support?</inlineHelpText>
    <label>Payer Support?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>