FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Payment_Plans_in_Scope__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plans_in_Scope__c</fullName>
    <description>BOPI-534. For Healthcare.</description>
    <label>Payment Plans in Scope?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>