FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Portal_Code_for_Test__c.field-meta.xml
<CustomField>
    <fullName>Portal_Code_for_Test__c</fullName>
    <description>BOPI-492: International Payments, Quick Start, MOR or XB Plus - what is the 3 letter portal code for test?</description>
    <inlineHelpText>What Is The 3 Letter Portal Code For Test?</inlineHelpText>
    <label>Portal Code for Test</label>
    <length>50</length>
    <type>Text</type>
</CustomField>