FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Prod_Portal_Shared_Secret__c.field-meta.xml
<CustomField>
    <fullName>Prod_Portal_Shared_Secret__c</fullName>
    <description>BOPI-492: International Payments, Quick Start, MOR or XB Plus - what is the prod portal shared secret?</description>
    <inlineHelpText>What Is The Prod Portal Shared Secret?</inlineHelpText>
    <label>Prod Portal Shared Secret</label>
    <length>50</length>
    <type>Text</type>
</CustomField>