FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Project_Desired_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Desired_Go_Live_Date__c</fullName>
    <description>BOPI-492: Enter the Desired Go-Live date for this Build Request</description>
    <inlineHelpText>Enter the Desired Go-Live date for this Build Request</inlineHelpText>
    <label>Project Desired Go-Live Date</label>
    <type>Date</type>
</CustomField>