FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>BOPI-492: Type of Project</description>
    <inlineHelpText>Select the Project Type</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Logo</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>New Feature Rollout</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>