FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Prompt_Pay_Discount__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Pay_Discount__c</fullName>
    <description>BOPI-492: Used in the Healthcare Implementation Documentation</description>
    <inlineHelpText>Used in the Healthcare Implementation Documentation</inlineHelpText>
    <label>Prompt Pay Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>