FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Reason_for_Internal_Pre_Kickoff_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Internal_Pre_Kickoff_Meeting__c</fullName>
    <description>BOPI-492: Explain the reason for an INTERNAL pre-kickoff meeting</description>
    <inlineHelpText>Explain the reason for an INTERNAL pre-kickoff meeting</inlineHelpText>
    <label>Reason for Internal Pre-Kickoff Meeting</label>
    <type>TextArea</type>
</CustomField>