FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Settlement_Currency__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Currency__c</fullName>
    <description>BOPI-492: Settlement Currency</description>
    <inlineHelpText>Select the Settlement Currency</inlineHelpText>
    <label>Settlement Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>