FLY wire David/force-app/main/default/objects/Build_Request__c/fields/SSO_Integration_Staff_Ex__c.field-meta.xml
<CustomField>
    <fullName>SSO_Integration_Staff_Ex__c</fullName>
    <description>BOPI-534. For Healthcare. Flywire can provide SSO integration to make Staff logins easier to manage. Only check this box if the client has confirmed this as a requirement.</description>
    <inlineHelpText>Flywire can provide SSO integration to make Staff logins easier to manage. Only check this box if the client has confirmed this as a requirement.</inlineHelpText>
    <label>SSO Integration (Staff Ex)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>