FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Technical_Call_Details__c.field-meta.xml
<CustomField>
    <fullName>Technical_Call_Details__c</fullName>
    <description>BOPI-492: Date of technical, who was involved</description>
    <inlineHelpText>Date of technical, who was involved</inlineHelpText>
    <label>Technical Call Details</label>
    <type>TextArea</type>
</CustomField>