FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BOPI-492: Enter the Contact who will be the technical contact</description>
    <inlineHelpText>Enter the Contact who will be the technical contact</inlineHelpText>
    <label>Technical Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Build Requests (Technical Contact)</relationshipLabel>
    <relationshipName>Build_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>