FLY wire David/force-app/main/default/objects/Build_Request__c/fields/Test_Portal_Shared_Secret__c.field-meta.xml
<CustomField>
    <fullName>Test_Portal_Shared_Secret__c</fullName>
    <description>BOPI-492: International Payments, Quick Start, MOR or XB Plus - what is the test portal shared secret?</description>
    <inlineHelpText>What Is The Test Portal Shared Secret?</inlineHelpText>
    <label>Test Portal Shared Secret</label>
    <length>50</length>
    <type>Text</type>
</CustomField>